crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_strict_block_blockquote_same_line_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..32
  BLOCK_QUOTE@0..32
    BLOCK_QUOTE_MARKER@0..1 ">"
    WHITESPACE@1..2 " "
    HTML_BLOCK@2..32
      HTML_BLOCK_TAG@2..32
        TEXT@2..31 "<form id=\"x\">foo *bar ..."
        NEWLINE@31..32 "\n"
