crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_void_strict_block_tags_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..39
  HTML_BLOCK@0..39
    HTML_BLOCK_TAG@0..5
      TEXT@0..4 "<hr>"
      NEWLINE@4..5 "\n"
    HTML_BLOCK_CONTENT@5..39
      TEXT@5..11 "<hr />"
      NEWLINE@11..12 "\n"
      TEXT@12..25 "<hr id=\"bar\">"
      NEWLINE@25..26 "\n"
      TEXT@26..31 "<col>"
      NEWLINE@31..32 "\n"
      TEXT@32..38 "<meta>"
      NEWLINE@38..39 "\n"
